# MultiInferenceEngine

./: .gitignore  CMakeLists.txt
Impl/: CMakeLists.txt
Impl/ncnn/: ModelFactory.cpp  ModelFactory.h  ncnn.h
Impl/ncnn/models/: ModelBase.cpp  ModelBase.h  U2NetModel.h
Inc/: IModelBase.h  IModelFactory.h  IU2NetModel.h  export.h  macroConfig.h  typedef.h
